--- a/package.json
+++ b/package.json
@@ -6,10 +6,11 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "nodemon --inspect src/index.js",
-    "watch" : "node-sass --watch src/resources/scss/app.scss --output src/public/css/app.css"
+    "watch": "node-sass --watch src/resources/scss/app.scss --output src/public/css/app.css",
+    "beautiful": "lint-staged"
   },
   "repository": {
-    "type": "git",  
+    "type": "git",
     "url": "git+https://github.com/cuongbetu/nodejs_21-12.git"
   },
   "keywords": [
@@ -22,13 +23,24 @@
     "url": "https://github.com/cuongbetu/nodejs_21-12/issues"
   },
   "homepage": "https://github.com/cuongbetu/nodejs_21-12#readme",
+  "lint-staged": {
+    "src/**/*.{js,json,scss}": "prettier --single-quote  --trailing-comma all --tab-width 4 --write"
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "lint-staged"
+    }
+  },
   "dependencies": {
     "express": "^4.17.1",
     "express-handlebars": "^5.2.0"
   },
   "devDependencies": {
+    "husky": "^4.3.6",
+    "lint-staged": "^10.5.3",
     "morgan": "^1.10.0",
     "node-sass": "^5.0.0",
-    "nodemon": "^2.0.6"
+    "nodemon": "^2.0.6",
+    "prettier": "^2.2.1"
   }
 }
